--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     }
 }
