--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "spatie/phpunit-watcher": "^1.22"
     }
 }
