--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "spatie/phpunit-watcher": "^1.22"
+    },
+    "autoload": {
+        "psr-4": {
+            "Evand\\Email\\": "src/"
+        }
     }
 }
