--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
         "psr-4": {
             "Evand\\Email\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Test\\Evand\\Email\\": "test/"
+        }
     }
 }
