--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0"
+        "php": "^7.0",
+        "baghayi/php-values": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
