--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.0",
-        "baghayi/php-values": "^1.1"
+        "baghayi/php-values": "^1.1",
+        "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
